# GUIFrameworks

./: .gitignore  README.md
GLFW/Tutorial/: linmath.h  main.c
Gtk/C/HelloWorld/: hello-world-gtk.c  makefile
Gtk/CPP/HelloWorld/: helloworld.cpp  main.cpp  makefile
Gtk/CPP/HelloWorldGtkmm3/: helloworld.cpp  helloworld.h  makefile
Gtk/HelloWorld/: hello-world-gtk.c
Gtk/Python/: hello.py  hello2.py
KDE/HelloWorld/: CMakeLists.txt  HelloWorld.kdev4  main.cpp
KDE/HelloWorld/.kdev4/: HelloWorld.kdev4
KDE/KDevHelloWorld/: CMakeLists.txt  KDevHelloWorld.kdev4  Messages.sh
KDE/KDevHelloWorld/.kdev4/: KDevHelloWorld.kdev4
KDE/KDevHelloWorld/icons/: CMakeLists.txt
KDE/KDevHelloWorld/src/: CMakeLists.txt  kdevhelloworldwindow.cpp  kdevhelloworldwindow.h  main.cpp  org.example.kdevhelloworld.appdata.xml  org.example.kdevhelloworld.desktop
QT/WinNotePad/: WinNotePad.pro  main.cpp  notepad.ui
wxWidgets/CPP/HelloWorld/: Helloworld.cpp
wxWidgets/HelloWorld/: Helloworld.cpp
wxWidgets/HelloWorldWin/HelloWorld/: main.cpp
wxWidgets/Python/HelloWorld/: helloworld1.py  helloworld2.py
